wordpress.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /wordpress
            backend:
              service:
                name: wp-wordpress
                port:
                  number: 80
